--- a/src/app/style/home.scss
+++ b/src/app/style/home.scss
@@ -1,19 +1,6 @@
 
 @use "./variable.scss";
 
-h1,
-h2,
-h3,
-h4 {
-font-family: variable.$font-title; // Accès via namespace
-  color: variable.$font-color-title;
-}
-
-p,
-li {
-  font-family: variable.$font-text;
-  color: variable.$font-color-text;
-}
 
 .header-container {
   display: flex;
@@ -51,16 +38,22 @@ li {
   padding: 15px;
   border-radius: 10px;
   cursor: pointer;
-  color: #faebd7;
+  color: #ffd700;
   font-weight: bolder;
   box-shadow: inset -1px 3px 8px 5px gold, 2px 1px 10px 0px black,
     5px 5px 15px 5px black;
+  text-shadow: black 1px 1px;
+  background-color: aliceblue;
+  transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease;
 }
 
 .nav-list li:hover {
-  background: variable.$font-color-title;
+  transform: scale(1.1); /* Zoom léger */
+  background-color: #ffd700; /* Inverser les couleurs */
   color: black;
+  text-shadow: aliceblue 1px; /* Met en valeur les lettres */
 }
+
 
 .nav-link {
   text-decoration: none;
@@ -75,12 +68,13 @@ li {
 
 .profil {
   width: 350px;
+  height: auto ;
   margin: auto;
   border-radius: 20px;
-  box-shadow: inset -1px 3px 8px 5px gold, 2px 5px 10px 0px #faebd7,
-    5px 5px 15px 5px rgba(0, 0, 0, 0);
+box-shadow: inset -1px 3px 8px 5px gold, 2px 1px 10px 0px black,
+    5px 5px 15px 5px black;
 }
-
+.sub-title{text-shadow: black   1px 1px;}
 .description-container {
   position: relative;
   display: flex;
@@ -90,28 +84,11 @@ li {
   padding: 20px;
   width: 43%;
   margin-left: 80px;
+  box-shadow: inset -1px 3px 8px 5px gold, 2px 1px 10px 0px black,
+    5px 5px 15px 5px black;
 }
 
-.description-container::before,
-.description-container::after {
-  content: "";
-  position: absolute;
-  width: 150px;
-  height: 150px;
-  border: 2px solid goldenrod;
-}
 
-.description-container::before {
-  top: 0;
-  left: 0;
-  border-width: 2px 0px 0px 2px;
-}
-
-.description-container::after {
-  bottom: 0;
-  right: 0;
-  border-width: 0px 2px 2px 0px;
-}
 
 .description-container h2 {
   margin-bottom: 0;
@@ -174,7 +151,7 @@ li {
   padding: 25px;
   box-shadow: inset 1px 1px 5px 5px gold, 2px 5px 10px 0px black,
     5px 5px 15px 5px black;
-  background: #faebd7;
+  background: whitesmoke;
   border-radius: 20px;
 }
 
@@ -184,6 +161,7 @@ li {
 
 .footer-container {
   text-align: center;
+  p{color: #ffd700;}
 }
 .footer-container p {
   text-shadow: 1px 0px 1px, 0px 1px 1px black, 2px 1px 1px black,
