--- a/src/app/style/variable.scss
+++ b/src/app/style/variable.scss
@@ -11,5 +11,5 @@
 $font-title: "Empire";
 $font-text: "Awelier";
 $border-color: #ffd700;
-$font-color-title: #faebd7;
-$font-color-text: #fffafa;
+$font-color-title: #ffd700;
+$font-color-text: black;
