--- a/src/app/style/global.scss
+++ b/src/app/style/global.scss
@@ -2,7 +2,7 @@
 @import './home.scss';
 @import"./projet.scss";
 @import "./oneproject.scss";
-
+@import "./contact.scss";
 body {
   border-top: 10px groove;
   border-right: 10px ridge;
