--- a/src/app/style/global.scss
+++ b/src/app/style/global.scss
@@ -3,6 +3,7 @@
 @import"./projet.scss";
 @import "./oneproject.scss";
 @import "./contact.scss";
+@import "./Nav.scss";
 
  body {
   border-top: 10px groove;
