finish adminprofil+style+responsive

--- a/src/app/style/global.scss
+++ b/src/app/style/global.scss
@@ -4,6 +4,8 @@
 @import "./oneproject.scss";
 @import "./contact.scss";
 @import "./Nav.scss";
+@import "./profilpage.scss";
+@import "./admin.scss";
 
  body {
  
