--- a/src/app/style/global.scss
+++ b/src/app/style/global.scss
@@ -4,8 +4,9 @@
 @import "./oneproject.scss";
 @import "./contact.scss";
 @import "./Nav.scss";
-@import "./profilpage.scss";
+@import "./profiladmin.scss";
 @import "./admin.scss";
+@import "./projetadmin.scss";
 
  body {
  
