--- a/src/app/style/home.scss
+++ b/src/app/style/home.scss
@@ -1,4 +1,8 @@
 @use "./variable.scss";
+.homepage-container {
+  position: relative; // Assurez-vous que la position est relative
+  z-index: 1; // Doit être supérieur à celui des particules
+}
 
 .header-container {
   display: flex;
@@ -32,6 +36,8 @@
 }
 
 .profil {
+   position: relative; // Assurez-vous que la position est relative
+  z-index: 1; // Doit être supérieur à celui des particules
   width: 100%;
   max-width: 350px; /* Conserve la taille sur les écrans plus grands */
   height: auto;
@@ -46,7 +52,8 @@
 }
 
 .description-container {
-  position: relative;
+  position:relative; // Assurez-vous que la position est relative
+  z-index: 1; // Doit être supérieur à celui des particules
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -86,7 +93,8 @@
 
 .description-container p {
   margin-top: 0;
-  font-size: 1.5em;
+  font-weight: bolder;
+  font-size: 1.6em;
 }
 
 .skills-container {
