--- a/src/app/style/contact.scss
+++ b/src/app/style/contact.scss
@@ -1,224 +1,104 @@
 @use "./variable.scss";
-
-// Styles pour les particules
-.particles {
-  position: absolute; // Ou fixed, selon votre besoin
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0; // Assurez-vous que le z-index est inférieur
-}
-
-.homepage-container {
-  position: relative; // Assurez-vous que la position est relative
-  z-index: 1; // Doit être supérieur à celui des particules
-}
-
-.header-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.logoasd {
-  width: 350px;
-  height: auto;
-  background: none;
-}
-
-.header-title {
-  text-align: center;
-  font-size: 3em;
-  text-shadow: 1px 0px 1px, 0px 1px 1px black, 2px 1px 1px black,
-    1px 2px 1px black, 3px 2px 1px black, 2px 3px 1px black, 4px 3px 1px black,
-    3px 4px 1px black, 5px 4px 1px black, 4px 5px 1px black, 6px 5px 1px #ffd700,
-    5px 6px 1px #ffd700, 7px 6px 1px #ffd700;
-}
-
-.content {
-  display: flex;
-  flex-direction: row;
-  margin-top: 50px;
-  flex-wrap: wrap; /* Permet aux éléments de se réorganiser */
-  justify-content: center; /* Centre le contenu */
-}
-
-.profil {
-  position: relative; // Assurez-vous que la position est relative
-  z-index: 1; // Doit être supérieur à celui des particules
-  width: 100%;
-  max-width: 350px; /* Conserve la taille sur les écrans plus grands */
-  height: auto;
-  margin: auto;
-  border-radius: 20px;
-  box-shadow: inset -1px 3px 8px 5px gold, 2px 1px 10px 0px black,
-    5px 5px 15px 5px black;
-}
-
-.sub-title {
-  text-shadow: black 1px 1px;
-}
-
-.description-container {
-  position: relative; // Assurez-vous que la position est relative
-  z-index: 2; // Doit être supérieur à celui des particules
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-  width: 100%;
-  max-width: 43%; /* Ajuste la largeur maximale */
-  margin: auto; /* Centre le conteneur */
-  box-shadow: inset -1px 3px 8px 5px gold, 2px 1px 10px 0px black,
-    5px 5px 15px 5px black;
-}
-
-.description-container h2 {
-  margin-bottom: 0;
-  font-size: 2em;
-  text-shadow: 1px 0px 1px, 0px 1px 1px black, 2px 1px 1px black,
-    1px 2px 1px black, 3px 1px 1px black, 2px 3px 1px black, 4px 3px 1px black,
-    3px 4px 1px black, 5px 4px 1px black, 4px 5px 1px black, 6px 5px 1px #ffd700,
-    5px 6px 1px #ffd700, 7px 6px 1px #ffd700;
-}
-
-.description-container h3 {
-  text-shadow: 1px 0px 1px, 0px 1px 1px black, 2px 1px 1px black,
-    1px 2px 1px black, 3px 1px 1px black, 2px 3px 1px black, 4px 3px 1px black,
-    3px 4px 1px black, 5px 4px 1px black, 4px 5px 1px black, 6px 5px 1px #ffd700,
-    5px 6px 1px #ffd700, 7px 6px 1px #ffd700;
-  margin-top: 0;
-  margin-bottom: 5px;
-  font-size: 1.8em;
-}
-
-.description-container h4 {
-  margin-top: 0;
-  font-size: 1.7em;
-}
-
-.description-container p {
-  margin-top: 0;
-  font-size: 1.5em;
-}
-
-.skills-container {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  margin-top: 50px;
-}
-
-.skills-container h2 {
-  font-size: 2rem;
-  text-shadow: 1px 0px 1px, 0px 1px 1px black, 2px 1px 1px black,
-    1px 2px 1px black, 3px 2px 1px black, 2px 3px 1px black, 4px 3px 1px black,
-    3px 4px 1px black, 5px 4px 1px black, 4px 5px 1px black, 6px 5px 1px #ffd700,
-    5px 6px 1px #ffd700, 7px 6px 1px #ffd700;
-}
-
-.logo {
-  width: 70px;
-  height: auto; /* Ajout de la hauteur auto pour rendre l'image responsive */
-}
-
-.logo-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap; /* Permet aux logos de s'adapter sur plusieurs lignes si nécessaire */
-  max-width: 100%; /* S'assure que le conteneur ne dépasse pas la largeur de l'écran */
-}
-
-.skills-container ul {
-  margin-right: 30px;
-  margin-left: 30px;
-  padding: 25px;
-  box-shadow: inset 1px 1px 5px 5px gold, 2px 5px 10px 0px black,
-    5px 5px 15px 5px black;
-  background: whitesmoke;
-  border-radius: 20px;
-}
-
-.skills-container li {
-  list-style: none;
-}
-
-.footer-container {
-  text-align: center;
-
-  p {
-    color: #ffd700;
-  }
-}
-
-.footer-container p {
-  text-shadow: 1px 0px 1px, 0px 1px 1px black, 2px 1px 1px black,
-    1px 2px 1px black, 3px 2px 1px black, 2px 3px 1px black, 4px 3px 1px black,
-    3px 4px 1px black, 5px 4px 1px black, 4px 5px 1px black, 6px 5px 1px #ffd700,
-    5px 6px 1px #ffd700, 7px 6px 1px #ffd700;
-}
-
-/* Media queries pour ajuster les tailles de police sur les petits écrans */
-@media (max-width: 768px) {
-  .header-title {
-    font-size: 2em; /* Réduit la taille de police */
-  }
-
-  .description-container h2,
-  .description-container h3,
-  .description-container h4 {
-    font-size: 1.2em; /* Réduit la taille de la police des titres */
-  }
-
-  .content {
-    flex-direction: column; /* Change la direction en colonne sur les petits écrans */
-    align-items: center; /* Centre le contenu */
-  }
-
-  .profil,
-  .description-container {
-    width: 85%;
-    max-width: 90%; /* Rend les conteneurs plus larges sur les petits écrans */
-  }
-
-  .profil {
-    margin-top: 40px;
-  }
-}
-
 .info-container {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   box-shadow: inset -1px 3px 8px 5px gold, 2px 1px 10px 0px black,
     5px 5px 15px 5px black;
-  width: 600px; /* Largeur par défaut pour les grands écrans */
+  width: 90%; /* Utilisation de 90% pour les petits écrans */
+  max-width: 600px; /* Largeur maximum pour les grands écrans */
   margin: auto;
   margin-top: 50px;
   margin-bottom: 50px;
   border-radius: 20px;
   background-color: white;
 
+  ul { list-style: none; }
+  li { font-size: 1.2em; }
+  a { color: inherit; text-decoration: none; }
+
   /* Styles responsives */
   @media (max-width: 768px) { /* Pour les écrans jusqu'à 768px */
-    width: 80%; /* Largeur de 80% */
+    padding: 20px; /* Ajout de padding pour éviter que le contenu touche les bords */
+  }
+
+  @media (max-width: 480px) { /* Pour les écrans jusqu'à 480px */
+    font-size: 1em; /* Réduction de la taille de la police pour les très petits écrans */
   }
 }
 
 .cv-container {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%; /* Assurez-vous que le conteneur prend toute la largeur disponible */
 
+  h2 {
+    font-size: 2em;
+    text-shadow: 1px 0px 1px, 0px 1px 1px black, 2px 1px 1px black,
+      1px 2px 1px black, 3px 2px 1px black, 2px 3px 1px black, 4px 3px 1px black,
+      3px 4px 1px black, 5px 4px 1px black, 4px 5px 1px black, 6px 5px 1px #ffd700,
+      5px 6px 1px #ffd700, 7px 6px 1px #ffd700;
+  }
+
   /* Styles responsives */
   @media (max-width: 768px) { /* Pour les écrans jusqu'à 768px */
-    width: 80%; /* Largeur de 80% pour le conteneur CV */
+    width: 90%; /* Largeur de 90% pour le conteneur CV */
+  }
+
+  @media (max-width: 480px) { /* Pour les écrans jusqu'à 480px */
+    h2 { font-size: 1.5em; } /* Réduction de la taille de la police pour le titre */
   }
 }
+
+/* Styles pour le bouton */
+.button-cv {
+  padding: 10px 20px;
+  margin: 10px;
+  margin-top: 30px;
+  font-size: 1.5em;
+  color: #ffd700;
+  background-color: aliceblue;
+  border: none;
+  border-radius: 10px;
+  box-shadow: inset -1px 3px 8px 5px gold, 2px 1px 10px 0px black,
+    5px 5px 15px 5px black;
+  cursor: pointer;
+  transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease,
+    box-shadow 0.3s ease;
+  font-family: variable.$font-text;
+  text-shadow: black 1px 1px;
+
+  /* Effet de survol */
+  &:hover {
+    background-color: #ffd700; /* Couleur de fond au survol */
+    color: aliceblue; /* Couleur de texte au survol */
+    transform: scale(1.05); /* Zoom au survol */
+  }
+}
+
+/* Styles pour l'image du CV */
+.cv-image {
+  transition: transform 0.3s ease; /* Transition pour l'effet de zoom */
+
+  &:hover {
+    transform: scale(1.4); /* Zoom sur l'image au survol */
+  }
+
+  /* Styles responsives */
+  @media (max-width: 768px) { /* Pour les écrans jusqu'à 768px */
+    width: 100%; /* Assurez-vous que l'image s'adapte à la largeur */
+    max-width: 90%; /* Largeur maximum pour les petits écrans */
+  }
+
+  @media (max-width: 480px) { /* Pour les écrans jusqu'à 480px */
+    max-width: 80%; /* Ajustement pour les très petits écrans */
+  }
+}
+
