--- a/src/app/style/projetadmin.scss
+++ b/src/app/style/projetadmin.scss
@@ -1,5 +1,5 @@
 .admin-projects {
-  padding: 60px; /* Augmenter le padding */
+  padding: 60px;
   max-width: 1200px;
   margin: 0 auto;
   font-family: 'Roboto', sans-serif;
@@ -8,25 +8,29 @@
   h1, h2 {
     text-align: center;
     color: #333;
-    margin-bottom: 40px; /* Augmenter la marge inférieure */
-    font-size: 2.5rem; /* Agrandir la taille de la police */
+    margin-bottom: 40px;
+    font-size: 3rem; /* Agrandir la taille de la police */
   }
 
   /* Formulaire de projet */
   .project-form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background-color: #fff;
-    padding: 40px; /* Augmenter le padding */
+    padding: 40px;
     border-radius: 15px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-    margin-bottom: 60px; /* Augmenter la marge inférieure */
+    margin-bottom: 60px;
 
     input, textarea, select {
       width: 100%;
-      padding: 20px; /* Augmenter le padding pour les inputs */
-      margin-bottom: 25px; /* Augmenter la marge inférieure */
+      padding: 22px; /* Augmenter le padding pour les inputs */
+      margin-bottom: 25px;
       border: 1px solid #ccc;
       border-radius: 8px;
-      font-size: 20px; /* Agrandir la taille de la police pour les inputs */
+      font-size: 22px; /* Agrandir la taille de la police pour les inputs */
       transition: border-color 0.3s ease;
 
       &:focus {
@@ -36,21 +40,21 @@
 
     label {
       display: block;
-      margin-bottom: 12px; /* Augmenter la marge inférieure */
+      margin-bottom: 15px; /* Augmenter la marge inférieure */
       font-weight: bold;
       color: #555;
-      font-size: 18px; /* Agrandir la taille de la police */
+      font-size: 20px; /* Agrandir la taille de la police */
     }
 
     button {
       width: 100%;
-      padding: 16px; /* Augmenter le padding */
+      padding: 18px; /* Augmenter le padding */
       background-color: #007BFF;
       color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 18px; /* Agrandir la taille de la police */
+      font-size: 20px; /* Agrandir la taille de la police */
       transition: background-color 0.3s ease;
 
       &:hover {
@@ -67,13 +71,13 @@
 
   .dropdown-toggle {
     background-color: #f8f9fa;
-    padding: 16px; /* Augmenter le padding */
+    padding: 18px; /* Augmenter le padding */
     border: 1px solid #ccc;
     border-radius: 8px;
     cursor: pointer;
     text-align: left;
-    margin-bottom: 25px; /* Augmenter la marge inférieure */
-    font-size: 18px; /* Agrandir la taille de la police */
+    margin-bottom: 25px;
+    font-size: 20px; /* Agrandir la taille de la police */
   }
 
   .dropdown-menu {
@@ -84,19 +88,21 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     width: 100%;
-    max-height: 250px; /* Augmenter la hauteur max */
+    max-height: 250px;
     overflow-y: auto;
     margin-top: 5px;
   }
 
   .checkbox-option {
-    padding: 12px 16px; /* Augmenter le padding */
+
+    padding: 16px 20px; /* Augmenter le padding */
     cursor: pointer;
     display: flex;
-    align-items: center;
+   flex-direction: row;
+   justify-content: space-between;
 
     input {
-      margin-right: 12px; /* Gardez cette marge pour l'espacement à droite de la checkbox */
+      margin-right: 15px; /* Gardez cette marge pour l'espacement à droite de la checkbox */
     }
 
     &:hover {
@@ -107,8 +113,8 @@
   /* Liste des projets */
   .project-list {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Créer une grille responsive */
-    gap: 20px; /* Espacement entre les cartes */
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); /* Ajuster la taille minimale pour les cartes */
+    gap: 25px; /* Espacement entre les cartes */
     list-style-type: none;
     padding: 0;
   }
@@ -117,30 +123,30 @@
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 15px;
-    padding: 30px; /* Augmenter le padding pour les cartes */
-    margin-bottom: 25px; /* Augmenter la marge inférieure */
-    transition: box-shadow 0.3s ease, transform 0.3s ease; /* Ajouter la transition pour le zoom */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ajouter une ombre légère aux cartes */
+    padding: 40px; /* Augmenter le padding pour les cartes */
+    margin-bottom: 25px;
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: column; /* Alignement vertical */
-    justify-content: space-between; /* Équilibrer l'espace à l'intérieur de la carte */
+    flex-direction: column;
+    justify-content: space-between;
 
     &:hover {
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Ombre plus forte au survol */
-      transform: scale(1.05); /* Zoom léger au survol */
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+      transform: scale(1.05);
     }
   }
 
   .project-name {
-    font-size: 2.5rem; /* Agrandir la taille de la police */
-    margin-bottom: 15px; /* Augmenter la marge inférieure */
+    font-size: 3rem; /* Agrandir la taille de la police */
+    margin-bottom: 20px; /* Augmenter la marge inférieure */
     color: #007BFF;
   }
 
   .project-description, .projectlink, .project-repo {
-    margin: 15px 0; /* Augmenter la marge verticale */
+    margin: 20px 0; /* Augmenter la marge verticale */
     color: #555;
-    font-size: 18px; /* Agrandir la taille de la police */
+    font-size: 20px; /* Agrandir la taille de la police */
   }
 
   .skills-list {
@@ -151,25 +157,25 @@
   .skill-item {
     display: flex;
     align-items: center;
-    margin-right: 15px; /* Augmenter l'espacement */
+    margin-right: 20px; /* Augmenter l'espacement */
   }
 
   .skill-img {
-    margin-right: 8px; /* Augmenter l'espacement */
+    margin-right: 10px; /* Augmenter l'espacement */
   }
 
   .no-skills {
     color: #777;
-    font-size: 16px; /* Agrandir la taille de la police */
+    font-size: 18px; /* Agrandir la taille de la police */
   }
 
   .edit-button, .delete-button {
-    margin-right: 15px; /* Augmenter l'espacement */
-    padding: 10px 16px; /* Augmenter le padding */
+    margin-right: 20px; /* Augmenter l'espacement */
+    padding: 12px 18px; /* Augmenter le padding */
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px; /* Agrandir la taille de la police */
+    font-size: 18px; /* Agrandir la taille de la police */
   }
 
   .edit-button {
