--- a/src/app/style/home.scss
+++ b/src/app/style/home.scss
@@ -1,6 +1,6 @@
 @use "./variable.scss";
 .homepage-container {
-  position: relative; // Assurez-vous que la position est relative
+  position: absolute; // Assurez-vous que la position est relative
   z-index: 1; // Doit être supérieur à celui des particules
 }
 
@@ -11,6 +11,8 @@
 }
 
 .logoasd {
+  position: relative;
+  z-index: 2;
   width: 350px;
   height: auto;
   background: none;
@@ -53,7 +55,7 @@
 
 .description-container {
   position:relative; // Assurez-vous que la position est relative
-  z-index: 1; // Doit être supérieur à celui des particules
+  z-index: 5; // Doit être supérieur à celui des particules
   display: flex;
   flex-direction: column;
   align-items: center;
