--- a/src/app/style/home.scss
+++ b/src/app/style/home.scss
@@ -57,6 +57,7 @@
  // Assurez-vous que la position est relative
   z-index: 5; // Doit être supérieur à celui des particules
   display: flex;
+  background-color:whitesmoke;
   flex-direction: column;
   align-items: center;
   justify-content: center;
